--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ selenium==3.141.0
 requests==2.25.0
 pytest==6.1.2
 pytest-bdd==4.0.1
-webdrivermanager==0.9.0
+webdriver-manager==3.2.2
 pytest-xdist==2.1.0
 allure-pytest==2.8.22
